fix: sortedMoves order and isMrX